提交目录结构

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@
 /百度AI/BaiDuOCR/obj
 /设计模式/SimpleFactoryPattern/bin/Debug
 /设计模式/SimpleFactoryPattern/obj
+/BaiDuAI/BaiDuFace/bin/Debug
+/BaiDuAI/BaiDuFace/obj
+/BaiDuAI/BaiDuOCR/bin/Debug
+/BaiDuAI/BaiDuOCR/obj
+/DesignPatterns/SimpleFactoryPattern/bin/Debug
+/DesignPatterns/SimpleFactoryPattern/obj
