百度语音识别SDK调用demo

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@
 /BaiDuAI/BaiDuOCR/obj
 /DesignPatterns/SimpleFactoryPattern/bin/Debug
 /DesignPatterns/SimpleFactoryPattern/obj
+/BaiDuAI/BaiDuSpeech/bin/Debug
+/BaiDuAI/BaiDuSpeech/obj/Debug
+/FactoryMethod/FactoryMethod/obj/Debug
